[gd_scene format=3 uid="uid://3w4wmh0bta5j"]

[ext_resource type="Script" uid="uid://doxbvbchfbgyn" path="res://scenes/main/hud.gd" id="1_kvbcn"]
[ext_resource type="Shader" uid="uid://7t1ddkrlxaw0" path="res://scenes/interfaces/vignette.gdshader" id="1_ltp6p"]
[ext_resource type="Texture2D" uid="uid://d21qr7ee6bcl4" path="res://sprites/pointer_tool.png" id="3_bhafg"]
[ext_resource type="Texture2D" uid="uid://77ystatm7sfw" path="res://sprites/personal_informator.png" id="3_kvbcn"]
[ext_resource type="Texture2D" uid="uid://b4apli6inpf77" path="res://sprites/connector.png" id="4_bhafg"]
[ext_resource type="Texture2D" uid="uid://cc4ubrcu40qc1" path="res://sprites/wire_tool.png" id="4_cad0p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ga13h"]
shader = ExtResource("1_ltp6p")
shader_parameter/vignette_intensity = 1.0
shader_parameter/vignette_opacity = 0.400000019
shader_parameter/vignette_rgb = Color(0, 0, 0, 1)

[node name="Hud" type="CanvasLayer" unique_id=599667800]
script = ExtResource("1_kvbcn")

[node name="ToolBar" type="Control" parent="." unique_id=826988584]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="ToolBar" unique_id=884067852]
material = SubResource("ShaderMaterial_ga13h")
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -640.0
offset_top = -128.0
offset_right = 640.0
offset_bottom = 40.0
grow_horizontal = 2
color = Color(0.5411765, 1, 1, 1)

[node name="Tools" type="HBoxContainer" parent="ToolBar" unique_id=871051845]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -127.0
offset_right = 64.0
offset_bottom = -87.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Pointer" type="TextureButton" parent="ToolBar/Tools" unique_id=601696891]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture_normal = ExtResource("3_bhafg")
stretch_mode = 5

[node name="Wire" type="TextureButton" parent="ToolBar/Tools" unique_id=1350372622]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture_normal = ExtResource("4_cad0p")
stretch_mode = 5

[node name="PI" type="TextureButton" parent="ToolBar/Tools" unique_id=1843611676]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture_normal = ExtResource("3_kvbcn")
stretch_mode = 5

[node name="Connector" type="TextureButton" parent="ToolBar/Tools" unique_id=523119223]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture_normal = ExtResource("4_bhafg")
stretch_mode = 5

[connection signal="pressed" from="ToolBar/Tools/Pointer" to="." method="_on_pointer_pressed"]
[connection signal="pressed" from="ToolBar/Tools/Wire" to="." method="_on_wire_pressed"]
[connection signal="pressed" from="ToolBar/Tools/PI" to="." method="_on_pi_pressed"]
[connection signal="pressed" from="ToolBar/Tools/Connector" to="." method="_on_connector_pressed"]
